Fixes an overflow issue when hovering over the delete button on the prompts tab.

--- a/src/scss/components/_item.scss
+++ b/src/scss/components/_item.scss
@@ -33,6 +33,7 @@
     gap: 0.75rem;
     width: 100%;
     padding: 0.5rem 0;
+    overflow: clip;
   }
 
   &--compendium-document {
